# chameleon

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile
src/: args.rs  main.rs
src/args/: mod.rs
src/data/: data_errors.rs  mod.rs
src/data/binaries/: mod.rs
src/data/data_errors/: mod.rs
src/data/data_lib/: mod.rs
src/data/settings/: mod.rs
src/data/settings/wallpaper/: mod.rs
src/data/themes/: link.rs  mod.rs
src/data/themes/fixup/: mod.rs
src/data/themes/input/: mod.rs  web.rs
src/data/themes/install/: local.rs  web.rs
src/data/themes/link/: mod.rs
src/data/themes/reset/: mod.rs
