[package]
name = "chameleon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0.1"
futures = "0.3.30"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
tempdir = "0.3.7"
tokio = { version = "1", features = ["full"] }
toml = "0.8.10"
unwrap_display = "0.0.1"
zip = "0.6.6"
