[package]
name = "chameleon-th"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/clr-cera/chameleon"
description = "A universal theme switcher for unix systems"
keywords = ["cli", "theme", "unix", "custom"]

[[bin]]
name = "chameleon"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0.1"
futures = "0.3.30"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
tempdir = "0.3.7"
tokio = { version = "1", features = ["full"] }
toml = "0.8.10"
unwrap_display = "0.0.1"
walkdir = "2.5.0"
zip = "0.6.6"
